instance/monitoring/ingress/alertmanager-vs.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: alert-manager
spec:
  hosts:
  - "alerts.hostname" # {"$kpt-set":"alertmanager-hostname"}
  gateways:
  - main.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 9093
        host: monitoring-alertmanager
