instance/monitoring/ingress/prometheus-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: prometheus
spec:
  hosts:
  - "prometheus.hostname" # {"$kpt-set":"prometheus-hostname"}
  gateways:
  - main.istio-system.svc.cluster.local
  http:
  - route:
    - destination:
        port:
          number: 9090
        host: monitoring-prometheus
